# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]

## [1.2.0]
- Require Minecraft 1.20.1+, Fabric Loader 0.15.7+, and Fabric API.

### Added
- Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.
- Pasta olio e peperoncino.
- Gun upgrade system and upgrade items.
  - To upgrade a gun, hold the gun in the off-hand and use (right-click) the upgrade item held in the main hand.

### Changed
- Increase composting chance of half-sized chili potato sandwich.

### Removed
- Smithing table recipe for gun with bayonet.

## [1.1.0]
- Require Minecraft 1.20.1+, Fabric Loader, and Fabric API.

### Added
- Chili bullet gun with bayonet.

### Changed
- Rename `Chili Pepper Seeds` to `Chili Pepper Seeds (CBW)`.
- Change gun item textures.

## [1.0.2.1]
- Require Minecraft 1.20.1+, Fabric Loader, and Fabric API.

### Fixed
- Fix fabric.mod.json.

## [1.0.2]
- Port to 1.20.1 Fabric.
- Require Minecraft 1.20.1+, Fabric Loader, and Fabric API.