@@ -3,6 +3,8 @@
 [Source](https://github.com/Iunius118/ChiliBulletWeapons).
 
 ## [Unreleased]
+### Added
+- Add item descriptions to tooltips of gun upgrade items.
 
 ## [1.2.0]
 - Require Minecraft 1.20.1+, Fabric Loader 0.15.7+, and Fabric API.
